Add Google Analytics Tracking Code

--- a/backend/home/templates/base.html
+++ b/backend/home/templates/base.html
@@ -104,6 +104,15 @@
           "extendedTimeOut": 1000
         }
     </script>
+    <!-- CB Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146286257-99">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-146286257-99');
+  </script>
   </body>
 </html>
 
